--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         body {
             font-family: Arial, sans-serif;
             margin: 40px;
-            background-color: #f7f7f7;
+            background-color: #b0b9c4;
             color: #333;
             text-align: center;
         }
 
         textarea {
-            width: 90%;
+            width: 70%;
             height: 150px;
             padding: 10px;
             font-size: 16px;
